--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,15 +1,11 @@
-apiVersion: v1
-kind: Secret
-metadata:
-  name: infisical-secrets
-type: Opaque
-stringData:
-  AUTH_SECRET: 91a572ba8c25d401126622de42daa837
-  ENCRYPTION_KEY: LAOMUZ4V4KhF0gGfmLht75jV89ARAvHE2dHCoTVys4w=
-  SITE_URL: http://app.infisical.local
+global:
+  tlsDisable: true
 
-
-
-ingress:
-  nginx:
+server:
+  dataStorage:
     enabled: true
+  auditStorage:
+    enabled: true
+
+injector:
+  enabled: true
