--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -1,2 +1,2 @@
-injector:
-  affinity: null # Allow multiple pods per node (since minikube is only has one node)
+# injector:
+#   affinity: null # Allow multiple pods per node (since minikube only has one node)
