Switched to OpenBao (#1)
* Switched to HashiCorp Vault

* Switched to OpenBao and started testing stuff

* Added OpenBao init and unseal scripts

* Added header to init script

* Added post setup script

* Changed default dev path to keep the cached keys within the repo folder

* Enable UI

* Made the init script not override the existing keys if already initted

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,15 +1,17 @@
-apiVersion: v1
-kind: Secret
-metadata:
-  name: infisical-secrets
-type: Opaque
-stringData:
-  AUTH_SECRET: 91a572ba8c25d401126622de42daa837
-  ENCRYPTION_KEY: LAOMUZ4V4KhF0gGfmLht75jV89ARAvHE2dHCoTVys4w=
-  SITE_URL: http://app.infisical.local
+# global:
+#   tlsDisable: true
 
+ui:
+  enabled: true
 
+# server:
+  # extraArgs: "-dev"
+  # dev:
+  #   enabled: true
+  # dataStorage:
+  #   enabled: false
+  # auditStorage:
+  #   enabled: true
 
-ingress:
-  nginx:
-    enabled: true
+# injector:
+#   enabled: true
