--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,8 +1,11 @@
 apiVersion: v2
 name: secrets-manager
+description: Handles secrets on the platform
+type: application
 version: 0.1.0
+appVersion: "0.1.0"
 
 dependencies:
-  - name: infisical
-    version: "0.4.2" 
-    repository: 'https://dl.cloudsmith.io/public/infisical/helm-charts/helm/charts/'
+  - name: openbao
+    version: 0.19.2
+    repository: "@openbao"
